kadu (2.1-1) UNRELEASED; urgency=medium

  * New upstream release (Closes: #795488)

 -- Patryk Cisek <patryk@debian.org>  Sat, 10 Oct 2015 15:31:05 +0200

kadu (1.3-2) unstable; urgency=medium

  * Fixed build error with new CMake (Closes: #789840)

 -- Patryk Cisek <patryk@debian.org>  Wed, 08 Jul 2015 20:31:58 +0200

kadu (1.3-1) unstable; urgency=medium

  * New upstream release
  * Removed hardcoded upstream version (1.0) from debian/build_kadu.sh
    helper script

 -- Patryk Cisek <patryk@debian.org>  Sun, 28 Dec 2014 16:00:22 +0100

kadu (1.2-2) unstable; urgency=medium

  * Changed Architecture of kadu-dev to any

 -- Patryk Cisek <patryk@debian.org>  Sun, 23 Nov 2014 16:25:21 +0100

kadu (1.2-1) unstable; urgency=medium

  * New upstream release (Closes: #768463)

 -- Patryk Cisek <patryk@debian.org>  Sat, 08 Nov 2014 15:17:42 +0100

kadu (1.1-1) unstable; urgency=medium

  * New upstream release.
  * Removed 03-no-CMAKE_CXX_FLAGS-overwrite.patch patch. It's been
    included upstream.

 -- Patryk Cisek <patryk@debian.org>  Sun, 19 Oct 2014 10:01:12 +0200

kadu (1.0-2) unstable; urgency=medium

  * Using dpkg-buildflags to set compilation and linker flags.
  * Added 03-no-CMAKE_CXX_FLAGS-overwrite.patch to make it possible to set
    compilation flags.
  * Removed lintian override for RPATH in Kadu's plugins.
  * Using chrpath to strip Kadu's plugins from RPATH, since they're not
    needed there.

 -- Patryk Cisek <patryk@debian.org>  Thu, 02 Oct 2014 11:55:19 +0200

kadu (1.0-1) unstable; urgency=medium

  * New upstream release (Closes: #620690, #696761)
  * Fixed build on kfreebsd-* (Closes: #755105)
  * Updated copyright information in debian/copyright
  * Added debian/tmp/usr/share/kadu/AUTHORS.html to debian/kadu.docs

 -- Patryk Cisek <patryk@debian.org>  Tue, 30 Sep 2014 19:15:28 +0200

kadu (1.0~rc10-1) unstable; urgency=medium

  * New upstream release
  * Added libkadu package
