@@ -1,6 +1,7 @@
 kadu (2.1-1) UNRELEASED; urgency=medium
 
   * New upstream release (Closes: #795488)
+  * Updated debian/patches/02-about-dialog.patch for Kadu 2.1
 
  -- Patryk Cisek <patryk@debian.org>  Sat, 10 Oct 2015 15:31:05 +0200
 
